# sonik

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  fake-device.sh
.github/workflows/: release.yml
assets/: default_config.yaml
packaging/debian/: postinst  postrm
packaging/systemd/: plainsync.service  sonik.service
src/: config.rs  context.rs  lib.rs  main.rs  sync.rs  watcher.rs
src/commands/: clear.rs  config.rs  dump.rs  index.rs  indexes.rs  mod.rs  run.rs  show_config.rs  show_indexes.rs  stats.rs
src/core/: diff.rs  index.rs  mod.rs  scanner.rs  task.rs
src/daemon/: mod.rs  state.rs
src/sync/: detect.rs  detect_loop.rs  engine.rs  mod.rs  operations.rs  planner.rs  run.rs  validation.rs  watcher.rs
src/utils/: editor.rs  fs.rs  human.rs  mod.rs  paths.rs  slug.rs
tests/: core_tests.rs  refactoring_tests.rs  utils_tests.rs  validation_tests.rs
