[package]
name = "sonik"
version = "1.0.0"
edition = "2021"
authors = ["Aurelien ROY <roy.aurelien@etik.com>"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
categories = ["command-line-utilities"]
description = "Fast, diff-based sync utility for music devices and other targets."
documentation = "https://github.com/royaurelien/sonik"
repository = "https://github.com/royaurelien/sonik"
publish = false

[[bin]]
name = "sonik"
path = "src/bin/sonik.rs"

[[bin]]
name = "sonikd"
path = "src/bin/sonikd.rs"

[dependencies]
anyhow = "1"
bincode = "1.3"
blake3 = "1.8.2"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
env_logger = "0.11"
fs_extra = "1"
indicatif = "0.17"
log = "0.4"
nix = { version = "0.30.1", features = ["user"] }
notify = "6"
notify-rust = "4.11.7"
once_cell = "1"
sd-notify = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
users = "0.11.0"
walkdir = "2"
whoami = "1"

[dev-dependencies]
tempfile = "3.23.0"

[package.metadata.deb]
maintainer = "Aurelien ROY <roy.aurelien@etik.com>"
extended-description = """\
Sonik focuses on syncing folders, \
It performs diff-based transfers with no unnecessary writes, preserving the lifespan of your device. \
Fast, minimal, and adaptable, It can easily extend to other targets beyond music players."""
section = "utility"
priority = "optional"
assets = [
  ["target/release/sonik", "/usr/bin/sonik", "755"],
  ["target/release/sonikd", "/usr/bin/sonikd", "755"],
  ["packaging/systemd/sonik.service", "/usr/lib/systemd/user/sonik.service", "644"]
]
maintainer-scripts = "packaging/debian"
