[package]
name = "plainsync"
version = "1.0.0"
edition = "2021"
authors = ["Aurelien ROY <roy.aurelien@etik.com>"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
description = "Fast, diff-based sync utility for music devices and other targets."
documentation = "https://github.com/toolsforfolk/plainsync"
repository = "https://github.com/toolsforfolk/plainsync"
publish = false

[[bin]]
name = "plainsync"
path = "src/bin/plainsync.rs"

[[bin]]
name = "plainsyncd"
path = "src/bin/plainsyncd.rs"

[dependencies]
anyhow = "1"
bincode = "1.3"
blake3 = "1.8.2"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
comfy-table = "7.2.1"
dirs = "5"
env_logger = "0.11"
fs_extra = "1"
indicatif = "0.17"
log = "0.4"
nix = { version = "0.30.1", features = ["user"] }
notify = "6"
notify-rust = "4.11.7"
once_cell = "1"
sd-notify = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3.1.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
users = "0.11.0"
walkdir = "2"
whoami = "1"

[dev-dependencies]
tempfile = "3.23.0"

[package.metadata.deb]
maintainer = "Aurelien ROY <roy.aurelien@etik.com>"
extended-description = """\
Plainsync focuses on syncing folders, \
It performs diff-based transfers with no unnecessary writes, preserving the lifespan of your device. \
Fast, minimal, and adaptable, It can easily extend to other targets beyond music players."""
section = "utility"
priority = "optional"
assets = [
  ["target/release/plainsync", "/usr/bin/plainsync", "755"],
  ["target/release/plainsyncd", "/usr/bin/plainsyncd", "755"],
  ["packaging/systemd/plainsync.service", "/usr/lib/systemd/user/plainsync.service", "644"]
]
maintainer-scripts = "packaging/debian"
